# skerch

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  makefile  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yaml
docs/materials/: for_developers.rst  getting_started.rst  index.rst
docs/materials/apidoc_templates/: package.rst_t
docs/materials/examples/: cli.py  deep_learning.py  diag.py  example_cli.py  example_diagonals.py  example_parallel.py  example_triangles.py  extending.py  hdf5.py  linops.py  lowrank.py  sketching.py  synthmat.py  trace_diag_triang.py
docs/materials/examples_bakup/: README.txt  cli.py  lowrank.py
examples_old/: example_decompositions.py  example_deep_learning.py  example_distributed_decompositions.py  example_triangles.py
skerch/: __init__.py  __main__.py  a_posteriori.py  a_priori.py  algorithms.py  decompositions.py  distributed_decompositions.py  distributed_measurements.py  hdf5.py  linops.py  measurements.py  recovery.py  ssrft.py  subdiagonals.py  synthmat.py  triangles.py  utils.py
skerch/algorithms/: ssvd.py
skerch/cli/: __init__.py  create_hdf5_layout.py  create_hdf5_layout_lop.py  merge_hdf5.py  post_bounds.py
skerch/measurements/: __init__.py
skerch_old/: a_posteriori.py  distributed_measurements.py  linops.py
skerch_old/cli/: __init__.py  create_hdf5_layout.py  prio_hpars.py
test/: __init__.py  conftest.py  test_a_posteriori.py  test_a_priori.py  test_algorithms.py  test_cli.py  test_composite_diag_linops.py  test_distributed_decompositions.py  test_distributed_measurements.py  test_hdf5.py  test_linop_aggregate.py  test_linop_base.py  test_linop_measurements.py  test_linop_subtypes.py  test_linop_torchwrapper.py  test_linops.py  test_measurements.py  test_noise_linop.py  test_proj_linops.py  test_recovery.py  test_ssrft.py  test_subdiagonals.py  test_sum_banded_linops.py  test_synthetic_matrices.py  test_synthmat.py  test_triangular_linop.py  test_utils.py
test_old/: dseigh.py  dssvd.py  test_a_priori.py  test_decompositions.py  test_qr.py
